Work on main nav

--- a/practice-for-ch-html-css-aatimes-main/app/views/shared/_main_nav.html.erb
+++ b/practice-for-ch-html-css-aatimes-main/app/views/shared/_main_nav.html.erb
@@ -15,4 +15,10 @@
 			</li>
 		</ul>
 	</nav>
+  <nav class="right-nav">
+    <ul>
+      <li><a href="#">SUBSCRIBE NOW</a></li>
+      <li><a href="#">LOG IN</a></li>
+    </ul>
+  </nav>
 </header>
