--- a/practice-for-ch-html-css-aatimes-main/app/assets/stylesheets/components/_main_nav.scss
+++ b/practice-for-ch-html-css-aatimes-main/app/assets/stylesheets/components/_main_nav.scss
@@ -1,6 +1,13 @@
 @use '../variables' as *;
 
 .main-nav {
+
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  align-items: center;
+  
+
   
 }
 
@@ -10,10 +17,13 @@
 }
 
 .left-nav {
+  
+  display: flex;
 
   > ul {
     > li {
-      
+      display: inline-block;
+      padding: 10px;
     }
   }
 
@@ -23,9 +33,14 @@
 }
 
 .right-nav  {
+
+  display: flex;
+
   > ul {
+    
     > li {
-      
+      display: inline-block;
+      padding: 10px;
     }
 
     > li:last-of-type {
