--- a/practice-for-ch-html-css-aatimes-main/app/views/shared/_main_nav.html.erb
+++ b/practice-for-ch-html-css-aatimes-main/app/views/shared/_main_nav.html.erb
@@ -16,9 +16,10 @@
 		</ul>
 	</nav>
   <nav class="right-nav">
-    <ul>
-      <li><a href="#">SUBSCRIBE NOW</a></li>
-      <li><a href="#">LOG IN</a></li>
+    <ul class="button_1">
+      <li><a id="subscribe" href="#">SUBSCRIBE NOW</a></li>
+      <li><a id="login" href="#">LOG IN</a></li>
+      <li id="gear-icon"><a href="#"><i class="fa-solid fa-gear"></i></a></li>
     </ul>
   </nav>
 </header>
